# dining_philosophers

src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/core/: DiningPhilosophers.hpp  Fork.hpp  Philosopher.hpp
src/core/src/: DiningPhilosophers.cpp  Philosopher.cpp
src/dining_philosophers_entities/: CMakeLists.txt
src/dining_philosophers_entities/include/dining_philosophers_entities/: Fork.hpp  Philosopher.hpp
src/dining_philosophers_entities/src/: Philosopher.cpp
src/philosophers/: CMakeLists.txt
src/philosophers/include/philosophers/: ArbitratorCallEatMethod.hpp  HierarchyEatMethod.hpp  IEatMethod.hpp  NoSyncEatMethod.hpp  Philosopher.hpp  ScopedLockEatMethod.hpp  State.hpp  config.hpp
src/philosophers/src/: ArbitratorCallEatMethod.cpp  HierarchyEatMethod.cpp  NoSyncEatMethod.cpp  Philosopher.cpp  ScopedLockEatMethod.cpp
src/shared_resources/: CMakeLists.txt
src/shared_resources/include/shared_resources/: Fork.hpp  ForkArbitrator.hpp
src/shared_resources/src/: Fork.cpp
